# pycones-discord-bot

./: README.md  pyproject.toml
src/pycones_discord_bot/: bot.py  commands.py  config.py  tickets.py
src/pycones_discord_bot/interfaces/: __init__.py  ticket_platform.py
src/pycones_discord_bot/pretix/: __init__.py  pretix.py
